--- a/.drone.yml
+++ b/.drone.yml
@@ -1,14 +1,9 @@
 kind: pipeline
+type: docker
+name: hello-world
 
 steps:
-- name: test
-  image: golang
-  commands:
-  - go test
-  - go build
-
-- name: publish
-  image: plugins/docker
-  settings:
-    repo: octocat/hello-world
-    tags: [ latest, 1.0, 1 ]
+  - name: echo
+    image: alpine:3
+    commands:
+      - echo "Hello from Drone!"
