--- a/.drone.yml
+++ b/.drone.yml
@@ -4,6 +4,6 @@ name: hello-world
 
 steps:
   - name: echo
-    image: alpine:3
+    image: alpine:3.18   # includes /bin/sh, ARM64 compatible
     commands:
-      - echo "Hello from Drone!"
+      - echo "Hello from Drone on ARM64!"
