--- a/.drone.yml
+++ b/.drone.yml
@@ -6,4 +6,4 @@ steps:
   - name: echo
     image: alpine:3.18   # includes /bin/sh, ARM64 compatible
     commands:
-      - echo "Hello from Drone on ARM64!"
+      - echo "ok. Hello from Drone on ARM64!"
